[project]
name = "mlx-distributed-ring-inference"
version = "2.0.0"
description = "MLX distributed inference using ring topology for Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0",
    "transformers>=4.36.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[dependency-groups]
dev = [
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["distributed*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.local-ci]
skip_tests = true  # Requires Apple Silicon (MLX) - tests run manually on mini1/mini2

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
